--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -44,6 +44,8 @@ jobs:
         remove-dotnet: 'true'
         remove-android: 'true'
         remove-haskell: 'true'
+        skip-volumes: 'true'  
+        skip-directories: '/home/runner/work/wikjxwrt/wikjxwrt' 
 
     - name: Initialization environment
       env:
