--- a/.github/workflows/op.yml
+++ b/.github/workflows/op.yml
@@ -36,6 +36,18 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
 
+    - name: Maximize build space
+      uses: easimon/maximize-build-space@master
+      with:
+        root-reserve-mb: 10240
+        temp-reserve-mb: 100
+        swap-size-mb: 8192
+        overprovision-lvm: false
+        build-mount-path: '/mnt/build'
+        remove-dotnet: 'true'
+        remove-android: 'true'
+        remove-haskell: 'true'      
+
     - name: Initialization environment
       env:
         DEBIAN_FRONTEND: noninteractive
