--- a/.github/workflows/op.yml
+++ b/.github/workflows/op.yml
@@ -113,6 +113,7 @@ jobs:
       run: |
         cd openwrt/bin/targets/*/*
         rm -rf packages
+        find . ! -name '*.img.gz' ! -name '*.img' -type f -delete
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
