--- a/.github/workflows/3.yml
+++ b/.github/workflows/3.yml
@@ -29,8 +29,11 @@ env:
   TZ: Asia/Shanghai
 
 jobs:
-  build:
-
+ build:
+  permissions:
+    actions: write
+    contents: read
+    workflow: write
   runs-on: ubuntu-20.04
 
     steps:
