--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -129,8 +129,10 @@ jobs:
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@main
       with:
-        retain_days: 0
-        keep_minimum_runs: 2
+        retain_days: 1
+        keep_minimum_runs: 3
+      env:
+       GITHUB_TOKEN: ${{ secrets.GH_PAT }}  
 
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@master
