--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -111,9 +111,18 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "release_tag=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
-        touch release.txt
-        [ ${UPLOAD_GOFILE} = true && ${{ steps.gofile.outputs.url }} ] && echo "🔗 [GoFile](${{ steps.gofile.outputs.url }})" >> release.txt
+        # 生成带有随机前缀的标签（🌈wikjxwrt-YYYYMMDD）
+        DATE_TAG=$(date +"%Y%m%d")
+        PREFIXES=("🌈" "✨" "🚀" "🔥" "🌟" "⚡" "🎉" "🌻" "💡")  # 可选前缀符号
+        RAND_PREFIX="${PREFIXES[$RANDOM % ${#PREFIXES[@]}]}"
+        TAG_NAME="${RAND_PREFIX}wikjxwrt-${DATE_TAG}"  
+        # 输出 release_tag 变量
+        echo "release_tag=${TAG_NAME}" >> $GITHUB_OUTPUT
+        # 生成 Release 说明
+        echo "🚀 OpenWrt 24.10 编译完成！" > release.txt
+        echo "📅 编译日期: $(date +"%Y-%m-%d")" >> release.txt
+        echo "📦 源码版本: openwrt-24.10" >> release.txt
+        echo "🔗 固件仅包含 squashfs & ext4 格式" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: Upload firmware to release
