--- a/.github/workflows/ota.yml
+++ b/.github/workflows/ota.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   build:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
