--- a/.github/workflows/ceshi.yml
+++ b/.github/workflows/ceshi.yml
@@ -1,16 +1,4 @@
-#
-# https://github.com/P3TERX/Actions-OpenWrt
-#
-# File: .github/workflows/openwrt-bulder.yml
-# Description: Build OpenWrt using GitHub Actions
-#
-# Copyright (c) 2019-2024 P3TERX <https://p3terx.com>
-#
-# This is free software, licensed under the MIT License.
-# See /LICENSE for more information.
-#
-
-name: OpenWrt Builder CS
+name: WikjxWrt Builder
 
 on:
   repository_dispatch:
@@ -84,20 +72,11 @@ jobs:
       run: df -hT
 
     - name: Upload bin directory
-      run: |
-       git config --global user.name 'GitHub Actions'
-       git config --global user.email 'actions@github.com'
-       git fetch origin feeds
-       git checkout feeds || git checkout -b feeds
-       git pull origin feeds --rebase
-       mkdir -p wikjxwrt/24.10/x86_64/
-       cp -r openwrt/bin/packages/x86_64/* wikjxwrt/24.10/x86_64/
-       git add wikjxwrt/24.10/x86_64/
-       if [[ -n "$(git status --porcelain)" ]]; then
-         git commit -m "🏅 Sync feeds - 24.10 $(date '+%Y-%m-%d')"
-         git push origin feeds || echo "❌ Push failed, likely no new changes."
-       else
-       
+      uses: actions/upload-artifact@main
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+      with:
+        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: openwrt/bin
 
     - name: Organize files
       id: organize
@@ -120,8 +99,8 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        # 生成带有随机前缀的标签（🌈wikjxwrt-YYYYMMDD）
-        DATE_TAG=$(date +"%Y%m%d")
+        # 生成带有随机前缀的标签（🌈wikjxwrt-YYYYMMDD-HHMMSS）
+        DATE_TAG=$(date +"%Y%m%d-%H%M%S")
         PREFIXES=("🌈" "✨" "🚀" "🔥" "🌟" "⚡" "🎉" "🌻" "💡")  # 可选前缀符号
         RAND_PREFIX="${PREFIXES[$RANDOM % ${#PREFIXES[@]}]}"
         TAG_NAME="${RAND_PREFIX}wikjxwrt-${DATE_TAG}"  
@@ -129,7 +108,7 @@ jobs:
         echo "release_tag=${TAG_NAME}" >> $GITHUB_OUTPUT
         # 生成 Release 说明
         echo "🚀 OpenWrt 24.10 编译完成！" > release.txt
-        echo "📅 编译日期: $(date +"%Y-%m-%d")" >> release.txt
+        echo "📅 编译日期: $(date +"%Y-%m-%dT%H:%M:%S")" >> release.txt
         echo "📦 源码版本: openwrt-24.10" >> release.txt
         echo "🔗 固件仅包含 squashfs & ext4 格式" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
@@ -156,7 +135,69 @@ jobs:
       uses: dev-drprasad/delete-older-releases@master
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-        keep_latest: 3
+        keep_latest: 10
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+
+        
+  generate-ota-json:
+    name: Generate OTA JSON
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    
+    steps:
+      - name: Checkout main branch
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get latest release info
+        id: get_release
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const latest = await github.rest.repos.getLatestRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+            });
+
+            const asset = latest.data.assets.find(a => 
+              a.name === 'wikjxwrt-x86-64-generic-ext4-combined-efi.img.gz');
+
+            if (!asset) {
+              core.setFailed("Target firmware not found in the latest release.");
+              return;
+            }
+
+            const crypto = require('crypto');
+            const response = await fetch(asset.browser_download_url);
+            const buffer = await response.arrayBuffer();
+            const sha256 = crypto.createHash('sha256').update(Buffer.from(buffer)).digest('hex');
+
+            const json = {
+              "x86_64": [
+                {
+                  "build_date": String(Math.floor(new Date(latest.data.created_at).getTime() / 1000)),
+                  "sha256sum": sha256,
+                  "url": asset.browser_download_url
+                }
+              ]
+            };
+
+            const fs = require('fs');
+            fs.mkdirSync('tmp-api', { recursive: true });
+            fs.writeFileSync('tmp-api/fw.json', JSON.stringify(json, null, 4));
+
+      - name: Checkout api branch
+        run: |
+          git fetch origin api:api
+          git checkout api
+          cp tmp-api/fw.json .
+          git config user.name "actions-user"
+          git config user.email "actions@github.com"
+          git add fw.json
+          git commit -m "Update fw.json @ $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+          git push origin api
